docs: clarify Flink version configuration